plugins {
    id 'java'
    id 'application'
}
application {
    mainClassName = 'com.asledgehammer.candle.Candle'
}

compileJava {
    sourceCompatibility '16'
    targetCompatibility '16'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.asledgehammer.candle.Candle'
        )
    }
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    google()
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    compileOnly 'com.yworks:yguard:3.1.0'
    // https://mavenlibs.com/maven/dependency/net.sourceforge.argparse4j/argparse4j
    implementation 'net.sourceforge.argparse4j:argparse4j:0.9.0'
    // PZ Libraries
    implementation fileTree(dir: 'lib', include: ['*.jar'])
    implementation 'org.jetbrains:annotations:24.0.0'
    // https://mvnrepository.com/artifact/junit/junit
    // testImplementation 'junit:junit:4.4'
    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
    implementation 'org.yaml:snakeyaml:2.0'

}
